changes in navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav">
             <div class="nav-container">
                 <div class="logo">
-                    <imimages/logo.png" alt="instagram">
+                    <img src="images/logo.png" alt="instagram">
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Search">
